# ORPHAN-BLOCK-Bitcoin

./: All Six Critical files  CMakeLists.txt  LICENSE  README.md  UPDATES
src/: main.cpp
src/consensus/: ghostdag.cpp
src/crypto/: sha256.cpp
src/net/: network_service.h
src/src/consensus/: rewards.cpp
src/src/consensus/src/: main.cpp
src/src/crypto/: sha256.h
src/src/crypto/src/crypto/: sha256.cpp
